# MCP_git_repo_to_single_file

./: .gitignore  README.md  cursor_mcp_config.json  cursor_mcp_config_example.json  pyproject.toml  server.py  setup.py  test_client.py
