[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-git-files-server"
version = "0.1.0"
description = "A Model Context Protocol server for processing git repositories and files (optimized for uv)"
authors = [{name = "nsourlos", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.11.3",
    "gitpython==3.1.45",
    "files-to-prompt==0.6"
]

[project.urls]
Homepage = "https://github.com/nsourlos/MCP_git_repo_to_single_file"
Repository = "https://github.com/nsourlos/MCP_git_repo_to_single_file"

[project.scripts]
mcp-git-files-server = "server:main"

[tool.setuptools]
py-modules = ["server"]

# UV-specific configuration
[tool.uv]
dev-dependencies = []
